momentuHMM 2.0.0 2022-10-04
-----------------
NEW FEATURES

* continuous-time hidden Markov models can now be fitted using 'fitCTHMM' (and 'MIfitCTHMM') and simulated using 'simCTHMM' (or 'simHierCTHMM' for hierarchical continuous-time models)

* new data stream distribution "ctds" for (multistate) continuous-time discrete-space movement models, which can be prepared, fitted, and simulated using the functions 'prepCTDS', 'fitCTHMM' (or 'MIfitCTHMM'), and 'simCTDS' (or 'simHierCTDS' for hierarchical models), respectively.

* special pseudo-design matrix function 'langevin' has been added for simulating and fitting discrete-time approximations of the (multistate) Langevin diffusion model as a multivariate normal random walk (i.e. using the "rw_mvnorm2" or "rw_mvnorm3" data stream distributions)

* 'export' argument added to simulation and model fitting functions for exporting formula objects from the global environment when ncores>1

* 'colors' argument added to 'plotSpatialCov' function for specifying raster colors

* 'gradient' argument added to 'prepData' and 'simData' for calculating gradients of spatial covariates using bilinear interpolation

CHANGES

* when the probability density for a data stream observation is zero for all states, a warning is triggered and .Machine$double.xmin is used to avoid division by zero within the forward algorithm

* raster package moved to 'Imports'

* 'fixPar' argument cannot be specified for circular distribution parameters unless 'DM' is also specified

* 'initialValues' (Par0, beta0, delta0) are now returned in 'conditions' list of 'momentuHMM' objects

BUG FIXES

* for multivariate normal data streams, pseudo-residuals were improperly calculated using a chi-square CDF ('qchisq') instead of the standard normal CDF ('qnorm')

* getParDM did not properly calculate working scale parameters for categorical distribution parameters when DM included covariates or constraints
