@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 2.0.0
-Date: 2022-10-04
+Date: 2022-10-13
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
@@ -56,7 +56,7 @@ Suggests:
     ctmcmove,
     Matrix,
     gdistance
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 Encoding: UTF-8
 NeedsCompilation: yes
 VignetteBuilder: R.rsp
