@@ -153,6 +153,7 @@ importFrom(graphics,title)
 importFrom(mvtnorm,pmvnorm)
 importFrom(mvtnorm,rmvnorm)
 importFrom(numDeriv,grad)
+importFrom(numDeriv,hessian)
 importFrom(rlang,list2)
 importFrom(sp,CRS)
 importFrom(sp,coordinates)
@@ -175,6 +176,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,na.pass)
 importFrom(stats,nlm)
 importFrom(stats,optim)
+importFrom(stats,optimHess)
 importFrom(stats,optimise)
 importFrom(stats,pbinom)
 importFrom(stats,plogis)
